Update opg2-system.py, 22.tex, and 4 more files...

--- a/CSB/EPG2/incl/main/23.tex
+++ b/CSB/EPG2/incl/main/23.tex
@@ -14,13 +14,13 @@ der er modtagelige for smitte på tidspunktet $t$. $x_2(t)$ er antallet af smitt
 Disse kan smitte de individer der er modtagelige. 
 $x_3(t)$ betegner individer der enten er immune, eller som er blevet immune efter at have været smittet.
 %
-%Modellen er beskrevet ved følgende tre differentialligninger: 
+Modellen er beskrevet ved følgende tre differentialligninger: 
 %
-%\begin{align}
-%\frac{dx_1}{dt} & = - \alpha x_1 x_2, \\
-%\frac{dx_2}{dt} & = \alpha x_1 x_2 - \beta x_2 , \\
-%\frac{dx_3}{dt} & = \beta x_2.
-%\end{align}
+\begin{align}
+\frac{dx_1}{dt} & = - \alpha x_1 x_2, \\
+\frac{dx_2}{dt} & = \alpha x_1 x_2 - \beta x_2 , \\
+\frac{dx_3}{dt} & = \beta x_2.
+\end{align}
 %
 Vi kan skrive systemet og begyndelsesbetingelsen på vektorform som
 %
