--- a/CSB/EPG2/incl/main/23a.tex
+++ b/CSB/EPG2/incl/main/23a.tex
@@ -8,5 +8,5 @@ Implementér Euler metoden og Runge-Kutta RK4 metoden for vektorfunktioner.
 \end{color}
 \\\\
 % 
-Se \textsc{vedikkehvaddenhedder.py}.
+Se \textsc{system-example.py}.
 %
