--- a/CSB/EPG2/incl/main/23b.tex
+++ b/CSB/EPG2/incl/main/23b.tex
@@ -1,5 +1,14 @@
-\newpage
 \subsection*{(b) }
+%
+\begin{color}{AAUblue2}
+%
+Forstå modellen og betydningen af parametrene samt begyndelsesværdierne, ved at udfører numeriske eksperimenter. 
+Plot løsningskurven. 
+Brug \textsc{opg2-system.py}, og gennemgå koden med henblik på at modificere den. 
+Vælg en række andre begyndelsesværdier, parameterne $\alpha$ og $\beta$. Plot også de tre kurver $(t, x_j(t)), j = 1,2,3$ i samme figur.
+% 
+\end{color}
+\\\\
 % 
 For at få en idé om hvilken betydning parametrene har, er der lavet en række eksperimenter, hvor en enkelt parameter er ændret.
 Figur \ref{fig:a1_b35_g0} er udgangspunktet.\\\\
