--- a/incl/main/appendicer/apend_b.tex
+++ b/incl/main/appendicer/apend_b.tex
@@ -7,3 +7,15 @@ Følgende udvalgte egenskaber ved lineært afhængige og uafhængige mængder, e
 \item Ethvert underrum af $\R^n$ der indeholder mere end $n$ vektorer er lineært afhængig
 \item Hvis spannet $\S$ er et underrum af $\R^n$ og ingen vektorer kan fjernes uden at ændre spannet, så er $\S$ lineært uafhængig
 \end{enumerate}
+
+
+\chapter{Vigtig sætning}
+%
+Følgende udvalgte sætning omhandlende span samt dimension er vigtig i forhold til visse egenskaber nævnt i rapporten.
+\begin{thm}{}{spandim}
+Antag, at spannet $\S$ af vektorerne $\mathbf{x}^1,\ldots,\mathbf{x}^k$ har dimension $m$, så gælder det, at 
+\begin{enumerate}[label=(\alph*)]
+    \item Der eksisterer en basis af $\S$ indeholdende $m$ af vektorerne $\mathbf{x}^1,\ldots,\mathbf{x}^k$
+    \item Hvis k $\leq$ m og $\mathbf{x}^1,\ldots,\mathbf{x}^k$ er lineært uafhængige, kan der dannes en basis af $\S$ ved at starte med $\mathbf{x}^1,\ldots,\mathbf{x}^k$, og dernæst vælge $m-k$ af vektorerne $\mathbf{x}^{k+1},\ldots,\mathbf{x}^{K+1}$
+\end{enumerate}
+\end{thm}{}
